# f3lfo

./: Cargo.toml
.cargo/: config
src/: main.rs
