[package]
authors = ["Adam C. Foltzer <acfoltzer@fastly.com>"]
edition = "2018"
readme = "README.md"
name = "f3lfo"
version = "0.1.0"

[dependencies]
bare-metal = "1.0.0"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.6.0-alpha.0"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"

[dependencies.stm32f3]
features = ["stm32f303", "rt"]
version = "0.12.1"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.6.1"

# this lets you use `cargo fix`!
[[bin]]
name = "f3lfo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
